--- a/index.html
+++ b/index.html
@@ -33,5 +33,29 @@
           - In your contact me section, make the text "Phone:" and "Email:" bolded
      -->
 </body>
+<div>
+  <h1>Shaty Hernandez</h1>
+  <h2>Software Developer</h2>
+  <hr>
+  <p>The <i>best</i> part about programming is the ability to be creative and learning how to do something different everyday.</p>
+  <img
+    alt="Classy picture of Shaty"                    
+     src="https://media.newyorker.com/photos/5fca5ba2fb872ceec2320638/1:1/w_1682,h_1682,c_limit/McGowan-MisquotedLines.jpg" 
+    width="300"
+    >
+  <h3>About Me</h3>
+  <p>"Master cleanse tacos shaman franzen, green juice pickled cloud bread echo park chillwave. Subway tile lo-fi master cleanse portland irony kombucha, DSA street art unicorn skateboard craft beer yr messenger bag echo park. Semiotics man braid wolf lo-fi beard. Williamsburg live-edge tattooed bicycle rights irony, intelligentsia fashion axe food truck you probably haven't heard of them locavore put a bird on it. Chia truffaut sustainable, microdosing af vape waistcoat brunch plaid art party fashion axe man braid mixtape humblebrag cred."</p>
+  <h3>My Projects</h3>
+  <ul>
+    <li>Project 1</li>
+    <li>Project 2</li>
+    <li>Project 3</li>
+  </ul>
+  <h3>Contact Me</h3>
+  <p><b>Phone Number:</b>(678)999-8212</p>
+  <a href mailto:fake@email.com> <b>Email Me!</b></a>
+
+  
+</div>
 
 </html>
